2013-05-29: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GSWeb/GNUmakefile
	* GSWeb/GSWProcFS.m
	* GSWeb/GSWUtils.m
	* GSWeb/GSWHTMLStaticElement.m
	* GSWeb/GSWRecording.m
	* GSWeb/NSString+HTML.m
	* GSWeb/GSWMessage.m
	* GSWeb/GSWRequest.m
	* GSWeb/WOKeyValueUnarchiver.m
	* GSWeb/GSWMultiKeyDictionary.m
	* GSWeb/GSWTemporaryElement.m
	  fix some format strings, patch based on submission from
	  Graham Lee to bug report 39087

2013-05-27: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GSWeb/NSString+HTML.m
	* GSWeb/GSWDeclarationParser.m
	  make inline functions static to please clang

2013-03-04  David Wetzel <dave@turbocat.de>
	* GSWExtensions/GSWLongResponsePage.m
	* GSWDatabase/WODisplayGroup.m
	* GSWeb/GSWHTMLStaticElement.m
	* GSWeb/GSWDynamicURLString.m
	fix some warnings

2013-03-03 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GSWDatabase/WODisplayGroup.h
	* GSWDatabase/WODisplayGroup.m
	* GSWExtensions/GSWCollapsibleComponentContent.h
	* GSWExtensions/GSWCollapsibleComponentContent.m
	* GSWExtensions/GSWDictionaryRepetition.m
	* GSWeb/GSWRequest.m
	  make the methods in the interface match the 
	  methods in the implementation

2013-03-02 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GSWeb/GSWSessionTimeOutManager.h
	  GSWSessionTimeOutManager conforms to NSLocking protocol
	* GSWeb/GSWComponentDefinition.m
	* GSWeb/GSWComponentReference.m
	* GSWeb/GSWContext.m
	* GSWeb/GSWHTMLDynamicElement.m
	* GSWeb/GSWHyperlink.m
	* GSWeb/GSWResourceManager.m
	* GSWeb/GSWResourceRequestHandler.m
	  get rid of extaneous parentheses on equality tests
	* GSWeb/GSWUtils.m
	  NS(U)Integer conversions
	* GSWeb/GSWResourceManager.m
	* GSWeb/GSWHTMLStaticElement.m
	  do not use redundant stringWithString:
	* GSWeb/GSWContext.m
	  move @interface before @implementation
	* GSWDatabase/WODisplayGroup.[h|m]
	* GSWeb/GSWUtils.[h|m]
	  no need for categories to reimplement things
	  already defined in their primary class